# zzqsld-organize-projects

./: .gitignore  CONTRIBUTING.md  README.md  organize_projects.py  pyproject.toml  requirements.txt  setup.cfg  新建 文本文档.txt
.github/workflows/: ci.yml  process-and-release.yml
tests/: test_basic.py
