[metadata]
name = organize-projects
version = 0.1.0
description = A Python tool for identifying and processing project folders.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/organize-projects
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    docx2pdf
    pypdf
    pypinyin

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    organize-projects = organize_projects.organize_projects:main